versions/v4.0.0/samples/subsys/usb/usb.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/samples/subsys/usb/usb.html
original_path: samples/subsys/usb/usb.html
---

# USB device support

Samples that demonstrate [USB device support](../../../connectivity/usb/device/usb_device.md#usb-device-stack).

- [Console over USB CDC ACM](console/README.md#usb-cdc-acm-console "Output "Hello World!" to the console over USB CDC ACM.")Output "Hello World!" to the console over USB CDC ACM.
- [USB Audio asynchronous explicit feedback sample](uac2_explicit_feedback/README.md#uac2-explicit-feedback "USB Audio 2 explicit feedback sample playing audio on I2S.")USB Audio 2 explicit feedback sample playing audio on I2S.
- [USB Audio asynchronous implicit feedback sample](uac2_implicit_feedback/README.md#uac2-implicit-feedback "USB Audio 2 implicit feedback sample playing stereo and recording mono audio on I2S interface.")USB Audio 2 implicit feedback sample playing stereo and recording mono audio
  on I2S interface.
- [USB Audio headset](audio/headset/README.md#usb-audio-headset "Implement a USB Audio headset device with audio IN/OUT loopback.")Implement a USB Audio headset device with audio IN/OUT loopback.
- [USB Audio microphone & headphones](audio/headphones_microphone/README.md#usb-audio-headphones-microphone "Implement a USB Audio microphone + headphones device with audio IN/OUT loopback.")Implement a USB Audio microphone + headphones device with audio IN/OUT loopback.
- [USB CDC-ACM](cdc_acm/README.md#usb-cdc-acm "Use USB CDC-ACM driver to implement a serial port echo.")Use USB CDC-ACM driver to implement a serial port echo.
- [USB DFU (Device Firmware Upgrade)](dfu/README.md#usb-dfu "Implement device firmware upgrade using the USB DFU class driver.")Implement device firmware upgrade using the USB DFU class driver.
- [USB HID keyboard](hid-keyboard/README.md#usb-hid-keyboard "Implement a basic HID keyboard device.")Implement a basic HID keyboard device.
- [USB HID mouse](hid-mouse/README.md#usb-hid-mouse "Implement a basic HID mouse device.")Implement a basic HID mouse device.
- [USB Mass Storage](mass/README.md#usb-mass "Expose board's RAM or FLASH as a USB disk using USB Mass Storage driver.")Expose board's RAM or FLASH as a USB disk using USB Mass Storage driver.
- [USB shell](shell/README.md#usb-shell "Use shell commands to interact with USB device stack.")Use shell commands to interact with USB device stack.
- [USB testing application](testusb/README.md#testusb-app "Test USB device drivers using a loopback function.")Test USB device drivers using a loopback function.
- [WebUSB](webusb/README.md#webusb "Receive and echo data from a web page using WebUSB API.")Receive and echo data from a web page using WebUSB API.
